# QuantumDove

./: .gitignore  CMakeLists.txt  FAQ  INSTALL  LICENSE  README.md
doc/: gubbins.dox  qdove.dox  qdove.dox.in  qdove.in
examples/step-0/: CMakeLists.txt  step-0.cc
examples/step-1/: CMakeLists.txt  make_clean.sh  step-1.cc
examples/step-2/: CMakeLists.txt  step-2.cc
include/gubbins/base/: test_space.h  trial_space.h
include/gubbins/generic_linear_algebra/: eigenspectrum_system.h  generic_eigenspectrum_solver.h  generic_linear_algebra_solver.h  linear_algebra_system.h  system_type.h
include/gubbins/materials/: dielectric_field.h  elastic_tensor.h  material_symmetry.h  tensor_base.h
include/gubbins/models/: fick.h  poisson.h  schroedinger.h
include/gubbins/psuedopotentials/: function_library.h
include/qdove/base/: test_space.h  trial_space.h
include/qdove/generic_linear_algebra/: eigenspectrum_system.h  generic_eigenspectrum_solver.h  generic_linear_algebra_solver.h  linear_algebra_system.h  system_type.h
include/qdove/materials/: constants.h  dielectric_field.h  elastic_tensor.h  material_symmetry.h  tensor_base.h
include/qdove/models/: fick.h  poisson.h  schroedinger.h  statistics.h
include/qdove/psuedopotentials/: function_library.h
source/: CMakeLists.txt
source/base/: CMakeLists.txt  test_space.cc  test_space.inst  trial_space.cc  trial_space.inst
source/generic_linear_algebra/: CMakeLists.txt  eigenspectrum_system.cc  generic_eigenspectrum_solver.cc  generic_linear_algebra_solver.cc  linear_algebra_system.cc
source/materials/: CMakeLists.txt  dielectric_tensor.cc  elastic_tensor.cc  tensor_base.cc  tensor_base.inst
source/models/: CMakeLists.txt  fick.cc  fick.inst  poisson.cc  poisson.inst  schroedinger.cc  schroedinger.inst  statistics.cc
source/psuedopotentials/: CMakeLists.txt  function_library.cc  function_library.inst
